--- a/Matrix.html
+++ b/Matrix.html
@@ -39,7 +39,7 @@
     </div>
 </body>
 <script>
-    let matrix = prompt("Enter grid size (e.g., 5 for a 5x5 grid):");
+    let matrix = prompt("Enter number of matrix");
 let bomb = prompt("Enter number of bombs:");
 
 let container = document.getElementById('container');
