--- a/Matrix.html
+++ b/Matrix.html
@@ -12,6 +12,7 @@
             height: 100vh;
         }
         div span{
+            text-align: center;
             border: 1px solid black;
         }
     </style>
@@ -22,39 +23,80 @@
 <script>
     let set = 0;
     let matrix;
+    let span;
+    let div;
+    let array;
+    let bomb;
     start();
     function start() {
     if(set > 0) {
         matrix = '0';
     }
-    matrix =  Number(prompt("Enter a number"))
+    matrix =  Number(prompt("Enter a matrix"));
+    bomb =  Number(prompt("Enter a number of bombs"));
     let container = document.getElementById('container');
-    if(!matrix || matrix <= 0) {
+    if(!matrix || matrix <= 0 || !bomb || bomb <= 0) {
         alert("Enter a valid number");
         set++;
         start();
     }
     else{
-        let div = document.createElement('div');
+        div = document.createElement('div');
         div.style.height = 'auto';
         div.style.width = 'auto';
         div.style.display = 'grid';
         div.style.background = 'red';
         div.style.gridTemplateColumns = `repeat(${matrix},1fr)`;
         div.style.gap = '4px';
-        for(i = 0;i< matrix;i++) {
-        let span = document.createElement('span');
+
+        for(i = 0;i < matrix * matrix;i++) {
+        span = document.createElement('span');
         span.style.padding = '20px';
+        span.style.height = '20px';
         span.style.width = '20px';
         span.style.background = 'violet';
-        div.appendChild(span);
+        span.textContent = '0';
+        findMatrix();
+        if(array[i][2].includes(i)) {
+            span.textContent = '*';
         }
-        div.classList.add('boxes');
+        let nums = [];
+        for(j = 0;j < matrix * matrix;j++) {
+            nums.push(j);
+        }
+        nums = nums.filter((num)=> num % 2 !== 0)
+        if(nums.includes(i)) {
+            span.textContent = '*';
+        }
+        div.appendChild(span);
+        span.classList.add('boxes');
+        }
     container.appendChild(div);
-    console.log(matrix);
-    console.log(typeof(matrix));
-    }
+    let spans = document.querySelectorAll('.boxes');
+    spans.forEach((span) => {
+        span.addEventListener('click',function() {
+            if(span.textContent === '*') {
+                alert("Bomb is clicked");
+            }
+        })
+    })
 }
-
+}
+function findMatrix() {
+    let matrix2 = matrix * matrix;
+    array = [];
+    let count = 0;
+    for(i = 0; i < matrix2; i++) {
+        let r = new Array(3).fill(false,0,1);
+        r[1] = i;
+        array.push(r);
+    }
+    for(j = 0;j < bomb;j++) {
+    let random = Math.floor(Math.random() * matrix2);
+    array[j][2].push(random);
+    
+    }
+    console.log(array);
+}
 </script>
 </html>
